--- a/client/src/components/Toolbar/Toolbar.scss
+++ b/client/src/components/Toolbar/Toolbar.scss
@@ -98,6 +98,10 @@
 
   @include media-breakpoint-down(sm) {
     margin-left: 42px;
+
+    .insert-media-modal & {
+      margin-left: 0;
+    }
   }
 
   .toolbar--south & {
